// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CheckBox Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Checkbox needs only label and onChange by default.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Checkbox__Label-sc-1x6twh3-5 hPIPOh"
            data-test={undefined}
          >
            <input
              checked={false}
              className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
              disabled={false}
              name={undefined}
              onChange={[Function]}
              type="checkbox"
              value={undefined}
            />
            <div
              className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
            >
              <svg
                className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                data-test={undefined}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                />
              </svg>
            </div>
            <div
              className="Checkbox__TextContainer-sc-1x6twh3-1 bRtYDV"
            >
              <span
                className="Checkbox__LabelText-sc-1x6twh3-3 iJscfQ"
              >
                Label
              </span>
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Checkbox
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Label
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          checked
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CheckBox Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Playground of Checkbox
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Checkbox__Label-sc-1x6twh3-5 eXtSiF"
            data-test="test"
          >
            <input
              checked={true}
              className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
              disabled={true}
              name="name"
              onChange={[Function]}
              type="checkbox"
              value="value"
            />
            <div
              className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
            >
              <svg
                className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                data-test={undefined}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                />
              </svg>
            </div>
            <div
              className="Checkbox__TextContainer-sc-1x6twh3-1 bRtYDV"
            >
              <span
                className="Checkbox__LabelText-sc-1x6twh3-3 iJscfQ"
              >
                Label
              </span>
              <span
                className="Checkbox__Info-sc-1x6twh3-2 EKDFf"
              >
                Additional information for this choice
              </span>
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Checkbox
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Label
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          value
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              value
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          checked
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          disabled
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          name
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              name
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          hasError
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          dataTest
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              test
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          info
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Additional information for this choice
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CheckBox With TextLink in label 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With TextLink in label
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Additionally you can add info to this component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Checkbox__Label-sc-1x6twh3-5 hPIPOh"
            data-test={undefined}
          >
            <input
              checked={true}
              className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
              disabled={false}
              name={undefined}
              onChange={[Function]}
              type="checkbox"
              value="value"
            />
            <div
              className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
            >
              <svg
                className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                data-test={undefined}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                />
              </svg>
            </div>
            <div
              className="Checkbox__TextContainer-sc-1x6twh3-1 bRtYDV"
            >
              <span
                className="Checkbox__LabelText-sc-1x6twh3-3 iJscfQ"
              >
                <p
                  className="Text__StyledText-sc-19qtt4y-0 dJNjRc"
                  data-test={undefined}
                >
                  I instruct Kiwi.com to cancel this booking under the herein specified conditions and to process a refund in accordance with Kiwi.com’ 
                  <a
                    className="TextLink__StyledTextLink-sc-1bvlje4-1 dFiGVo"
                    data-test={undefined}
                    href={undefined}
                    onClick={undefined}
                    rel={undefined}
                    target={undefined}
                  >
                    Terms and Conditions
                  </a>
                  .
                </p>
              </span>
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Checkbox
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                &lt;Text /&gt;
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          checked
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          value
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              value
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CheckBox With help 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With help
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Additionally you can add info to this component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Checkbox__Label-sc-1x6twh3-5 hPIPOh"
            data-test={undefined}
          >
            <input
              checked={false}
              className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
              disabled={false}
              name={undefined}
              onChange={[Function]}
              type="checkbox"
              value="value"
            />
            <div
              className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
            >
              <svg
                className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                data-test={undefined}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                />
              </svg>
            </div>
            <div
              className="Checkbox__TextContainer-sc-1x6twh3-1 bRtYDV"
            >
              <span
                className="Checkbox__LabelText-sc-1x6twh3-3 iJscfQ"
              >
                Label
              </span>
              <span
                className="Checkbox__Info-sc-1x6twh3-2 EKDFf"
              >
                Additional information to this choice
              </span>
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Checkbox
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Label
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          value
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              value
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          info
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Additional information to this choice
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
